remove repositorie keywords
