# data_manager/static/swagger.json
@@ -685,53 +685,6 @@
         }
       }
     },
-    "/keywords": {
-      "get": {
-        "tags": [
-          "Keyword Request"
-        ],
-        "summary": "Returns Keyword Requests",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-            }
-          }
-        }
-      },
-      "post": {
-        "security":{
-          "bearerAuth": []
-        },
-        "tags": [
-          "Keyword Request"
-        ],
-        "summary": "Create a new keyword request system",
-        "requestBody": {
-          "description": "Keyword Request Post Object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-              }
-            }
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "201": {
-            "description": "OK",
-            "schema": {
-            }
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      }
-    },
     "/categories": {
       "get": {
         "tags": [
@@ -1298,98 +1251,6 @@
           },
           "404": {
             "description": "Failed. Repositorie Categorie Request not found."
-          }
-        }
-      }
-    },
-    "/keywords_repositorie_rel": {
-      "post": {
-        "security":{
-          "bearerAuth": []
-        },
-        "tags": [
-          "Keyword Repositorie Request"
-        ],
-        "summary": "Create a new keyword repositorie request system",
-        "requestBody": {
-          "description": "Repositorie Keyword Post Object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-              }
-            }
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "201": {
-            "description": "OK",
-            "schema": {
-            }
-          },
-          "400": {
-            "description": "Failed. Bad repositorie keyword data."
-          }
-        }
-      }
-    },
-    "/keywords_repositorie_rel/{keyword_id}/{repo_id}": {
-      "parameters": [
-        {
-          "name": "keyword_id",
-          "in": "path",
-          "required": true,
-          "description": "Repositorie Keyword Request keyword_id",
-          "type": "string"
-        },
-        {
-          "name": "repo_id",
-          "in": "path",
-          "required": true,
-          "description": "Repositorie Keyword Request repo_id",
-          "type": "string"
-        }
-      ],
-      "delete": {
-        "security":{
-          "bearerAuth": []
-        },
-        "summary": "Delete Repositorie Keyword Request by keyword_id and repo_id ",
-        "tags": [
-          "Keyword Repositorie Request"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "keyword_id",
-            "required": true,
-            "description": "Repositorie Keyword Request keyword_id",
-            "schema": {
-            }
-          },
-          {
-            "in": "path",
-            "name": "repo_id",
-            "required": true,
-            "description": "Repositorie Keyword Request repo_id",
-            "schema": {
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "OK",
-            "schema": {
-            }
-          },
-          "400": {
-            "description": "Failed. Misunderstood Request."
-          },
-          "404": {
-            "description": "Failed. Repositorie Keyword Request not found."
           }
         }
       }
